--- a/bot/wwwroot/default.htm
+++ b/bot/wwwroot/default.htm
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>QnAMakerBot</title>
+    <title>Unipi QnA</title>
     <style>
         body {
             margin: 0px;
@@ -364,56 +364,26 @@
             max-height: 10px;
         }
     </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            loadFrame();
-        });
-        var loadFrame = function () {
-            var iframe = document.createElement('iframe');
-            iframe.setAttribute("id", "iframe");
-            var offLineHTMLContent = "";
-            var frameElement = document.getElementById("how-to-iframe");
-            if (window.navigator.onLine) {
-                iframe.src = 'https://docs.botframework.com/static/abs/pages/f5.htm';
-                iframe.setAttribute("scrolling", "no");
-                iframe.setAttribute("frameborder", "0");
-                iframe.setAttribute("width", "100%");
-                iframe.setAttribute("height", "100%");
-                var frameDiv = document.getElementById("how-to-iframe");
-                frameDiv.appendChild(iframe);
-            } else {
-                frameElement.classList.add("remove-frame-height");
-            }
-        };
-    </script>
 </head>
 
 <body>
     <header class="header">
         <div class="header-inner-container">
             <div class="header-icon" style="display: inline-block"></div>
-            <div class="header-text" style="display: inline-block">QnAMakerBot Bot</div>
+            <div class="header-text" style="display: inline-block">Unipi QnA - pagina principale</div>
         </div>
     </header>
     <div class="row">
-        <div class="column" class="main-content-area">
-            <div class="content-title">Your bot is ready!</div>
-            <div class="main-text main-text-p1">You can test your bot in the Bot Framework Emulator<br />
-                by connecting to http://localhost:3978/api/messages.</div>
-            <div class="main-text download-the-emulator"><a class="ctaLink"
-                    href="https://aka.ms/bot-framework-F5-download-emulator" target="_blank">Download the Emulator</a>
+        <div class="column main-content-area">
+            <div class="content-title">Servizio bot di supporto Unipi</div>
+            <div class="main-text main-text-p1">Pagina indice per il servizio di supporto.</div>
+            <div class="main-text">
+                <strong>Prova di fuzionamento diretto (verrà rimossa in produzione)</strong>
             </div>
-            <div class="main-text">Visit <a class="ctaLink" href="https://aka.ms/bot-framework-F5-abs-home"
-                    target="_blank">Azure
-                    Bot Service</a> to register your bot and add it to<br />
-                various channels. The bot's endpoint URL typically looks
-                like this:</div>
-            <div class="endpoint">https://<i>your_bots_hostname</i>/api/messages</div>
-        </div>
-        <div class="column how-to-iframe" id="how-to-iframe"></div>
-    </div>
-    <div class="ms-logo-container">
-        <div class="ms-logo"></div>
+            <div class="main-text">
+                <iframe src='https://webchat.botframework.com/embed/unipiqna-bot?s=zkVQXnaBGjU.u6vDKWQdGxnhBblxfCZmlqN6q91aHKmtPHr7qlQvbpA' 
+                        style='max-width: 640px; width: 100%; min-height: 500px;'></iframe>
+            </div>
     </div>
 </body>
 
